<resources>
    <string name="app_name">MyRuns</string>
    <string name="hint_name">Your Name</string>
    <string name="button_text">Submit</string>
    <string name="ui_button_change_title">change your photo</string>
    <string name="hint_email">Your Email</string>
    <string name="hint_phone">Your Phone Number</string>
    <string name="hint_class">eg.2012</string>
    <string name="hint_major">Your Major</string>

    <string-array name="input_type">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="activity_type">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowbnoarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>
</resources>